--- a/EricssonDialer/DialerLibrary/src/main/res/values/strings.xml
+++ b/EricssonDialer/DialerLibrary/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_help">Help</string>
     <string name="normal_call">Normal Call</string>
-    <string name="pay4me">Pay4Me Call</string>
+    <string name="pay4me">MTN Pay4Me</string>
     <string name="action_settings">Settings</string>
 
 </resources>
